Improve Profile and Account flow
