# src/app/swagger/api.json
@@ -83,6 +83,47 @@
             "description": "Not Found"
           }
         }
+      },
+      "delete": {
+        "summary": "Deletes account by Id",
+        "parameters": [
+          {
+            "in": "path",
+            "name": "id",
+            "type": "string",
+            "required": true
+          }
+        ],
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "required": [
+                  "session"
+                ],
+                "properties": {
+                  "session": {
+                    "type": "string",
+                    "format": "session"
+                  }
+                }
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
       }
     },
     "/accounts/{id}/auth": {
@@ -178,7 +219,7 @@
     },
     "/auth/{sessionId}": {
       "get": {
-        "summary": "Validate and get session information",
+        "summary": "Validates and gets session information",
         "parameters": [
           {
             "in": "path",
@@ -199,7 +240,7 @@
     },
     "/profiles": {
       "get": {
-        "summary": "Get profiles",
+        "summary": "Gets profiles by query match",
         "parameters": [
           {
             "in": "query",
@@ -234,9 +275,30 @@
         }
       }
     },
+    "/profiles/usernames": {
+      "get": {
+        "summary": "Gets profiles by username prefix",
+        "parameters": [
+          {
+            "in": "query",
+            "name": "username",
+            "type": "string",
+            "required": true
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK - Profiles"
+          },
+          "404": {
+            "description": "Not Found"
+          }
+        }
+      }
+    },
     "/profiles/{id}": {
       "get": {
-        "summary": "Get profile by Id",
+        "summary": "Gets profile by Id",
         "parameters": [
           {
             "in": "path",
@@ -255,26 +317,55 @@
         }
       },
       "patch": {
-        "summary": "TODO"
-      }
-    },
-    "/profiles/usernames": {
-      "get": {
-        "summary": "Get profiles by username",
+        "summary": "Updates profile by Id",
         "parameters": [
           {
-            "in": "query",
-            "name": "username",
+            "in": "path",
+            "name": "id",
             "type": "string",
             "required": true
           }
         ],
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "required": [
+                  "session"
+                ],
+                "properties": {
+                  "session": {
+                    "type": "string"
+                  },
+                  "username": {
+                    "type": "string"
+                  },
+                  "name": {
+                    "type": "string"
+                  },
+                  "bio": {
+                    "type": "string"
+                  },
+                  "birthDate": {
+                    "type": "string",
+                    "format": "date"
+                  }
+                }
+              }
+            }
+          }
+        },
         "responses": {
           "200": {
-            "description": "OK - Profiles"
+            "description": "OK - Account"
           },
-          "404": {
-            "description": "Not Found"
+          "400": {
+            "description": "Bad Request"
+          },
+          "500": {
+            "description": "Internal Server Error"
           }
         }
       }
